--- a/css/styler.css
+++ b/css/styler.css
@@ -16,13 +16,14 @@ header{
     
 }
 nav{
-    background: #EAD06D;
+    background: #ead16d82;
     width: 100%;
     padding: 0.3rem 0;    
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
+    z-index: 2;
 }
 .logo_header{
     display: flex;
@@ -55,10 +56,11 @@ nav{
 .menu ul li a{
     color: #5A3B2C;
     font-weight: 100;
+    transition: 0.5s;
     
 }
 .menu ul li a:hover{
-    color: #944900;
+    color: #fff;
    
 }
 .menu ul button{
@@ -72,6 +74,7 @@ nav{
     font-size: 1.2rem;
     color: white;
     cursor: pointer;
+    transition: 0.5s;
 }
 .menu ul button:hover{
     background: #fff;
@@ -82,13 +85,13 @@ nav{
     gap: 1rem;
     font-size: 2rem;
     color: #5A3B2C;
+    transition: 0.5s;
 }
 .sociais i:hover{
     color: #944900;
 }
 .header_sobre{
-    width: 100;
-    height: 38rem;    
+    width: 100;   
     position: relative;
     display: flex;
     align-items: center;
@@ -97,18 +100,9 @@ nav{
 }
 .header_sobre img{
     width: 100vw;
-    z-index: -1;
+    z-index: -100;
 }
-.header_sobre::before{
-    content: " ";
-    width: 100vw;
-    height: 38rem;
-    background: #5A3B2C;
-    display: block;
-    opacity: 0.6;
-    position: absolute;
-    
-}
+
 .header_sobre h2{
     color: #fff;
     z-index: 1;
@@ -121,10 +115,11 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 #menu_categorias{
     width: 100%;
-    background-color: #EAD06D;
+    background-color: #ead16d82;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -154,7 +149,7 @@ main {
     background: #5A3B2C;
     color: #fff;
     font-weight: 400;
-    transition: all 0.9  ;
+    transition: 0.5s;
 }
 .primeiro{
     border-radius: 0.5rem 0 0 0.5rem;
@@ -167,7 +162,7 @@ main {
     color: #5A3B2C;
 }
 #cardapios_menu{
-    background-color: #EAD06D;
+    background-color: #ead16d82;
     border-radius: 0.5rem;
     padding: 1rem 3rem ;
     display: flex;
@@ -180,7 +175,6 @@ main {
 .cardapio_sabores span{
     font-size: 1.5rem;
     color: #5A3B2C;
-    font-family: 'Oleo Script', cursive;
     font-weight: 900;
     
 }
@@ -194,13 +188,24 @@ main {
 .cardapio_produtos{
     width: 19rem;
     height: 22rem;
-    background: #EAD06D;
+    background: #ead16d82;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     flex-direction: column;
     border-radius: 1rem;
-    gap: 2rem;
+    gap: 1rem;
+    position: relative;
+    margin-bottom: 3rem;
+}
+.cardapio_produtos img{
+    width: 15rem;
+    transition: 0.5s;
+    position: absolute;
+    top: 3rem;
+}
+.cardapio_produtos img:hover{
+    width: 18rem;
 }
 .cardapio_produtos h1{
     font-size: 2rem;
@@ -210,13 +215,70 @@ main {
     font-size: 1.2rem;
     padding: 0.5rem 1rem;
     border: none;
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
     background: #5A3B2C;
     color: #fff;
     justify-self: flex-end;
     cursor: pointer;
+    transition: 0.5s;
+    margin-bottom: 2.5rem;
 }
 .cardapio_produtos button:hover{
     background-color: #fff;
     color: #5A3B2C;
+}
+footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: #ead16d82;
+}
+#header_footer{
+    text-align: center;
+    background: #5A3B2C;
+    width: 100%;
+    padding: 0.5rem 0.5rem;
+}
+#header_footer h1{
+    color: #fff;
+    font-size: 1.2rem;
+}
+.main_footer{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 2rem;
+}
+.logofinal img{
+    width: 10rem;
+    margin: 1rem;
+}
+.main_footer ul{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3rem;
+    justify-content: center;
+    align-items: center;
+}
+.main_footer ul li a{
+    font-size: 1.5rem;
+    color: #5A3B2C;
+    
+}
+.direitos{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #5A3B2C;
+    padding: 1rem 1rem;
+    font-size: 1rem;
+    color: #fff;
+}
+.direitos a{
+    color: #fff;
 }
